http rest calls

--- a/src/components/default/sample.component.html
+++ b/src/components/default/sample.component.html
@@ -2,6 +2,7 @@
     <p><a routerLink="product-list">Products</a></p>
     <p><a routerLink="login">Login</a></p>
     <p><a routerLink="forms">Forms</a></p>
+    <p><a routerLink="http-rest">Http</a></p>
     <H2>Title: {{title}}</H2>
     <button (click)="changeColor()">Change Color</button>
     <p [style.color]="color">Text color</p>
